# modtranslator

./: .gitignore  CHANGELOG.md  LICENSE  ModTranslator.bat  README.md  modtranslator.spec  modtranslator_gui.py  pyproject.toml
.github/workflows/: ci.yml
glossaries/: fallout3_es.toml  fallout_base_es.toml  falloutnv_es.toml  skyrim_base_es.toml
glossaries/fallout/base/: fallout_base_de.toml  fallout_base_es.toml  fallout_base_fr.toml  fallout_base_it.toml  fallout_base_pl.toml  fallout_base_pt.toml  fallout_base_ru.toml
glossaries/fallout/fnv/: falloutnv_de.toml  falloutnv_es.toml  falloutnv_fr.toml  falloutnv_it.toml  falloutnv_pl.toml  falloutnv_pt.toml  falloutnv_ru.toml
glossaries/fallout/fo3/: fallout3_de.toml  fallout3_es.toml  fallout3_fr.toml  fallout3_it.toml  fallout3_pl.toml  fallout3_pt.toml  fallout3_ru.toml
glossaries/fallout/fo4/: fallout4_de.toml  (+6 more)
glossaries/skyrim/: skyrim_base_de.toml  skyrim_base_es.toml  skyrim_base_fr.toml  skyrim_base_it.toml  skyrim_base_pl.toml  skyrim_base_pt.toml  skyrim_base_ru.toml
src/modtranslator/: __init__.py  __main__.py  _pipeline_helpers.py  _pipeline_types.py  cli.py  pipeline.py
tests/: conftest.py  test_cli.py  test_multilang_integration.py  test_newline_split.py  test_pipeline.py  test_pipeline_glossary.py  test_pipeline_mc.py
tests/backends/: test_deepl.py  test_dummy.py  test_hybrid.py  test_hybrid_deepl.py  test_nllb.py  test_opus_mt.py
tests/core/: test_compression.py  test_mc_jar.py  test_mc_lang_parser.py  test_parser.py  test_parser_robustness.py  test_pex_parser.py  test_plugin.py  test_records.py  test_roundtrip.py  test_scpt_parser.py  test_stress.py  test_string_table.py  test_writer.py  test_writer_extended.py
tests/fixtures/: compressed.esp  create_fixtures.py  minimal_fo3.esp  minimal_fo3_ES.esp  minimal_fo4.esp  multi_record.esp  skyrim_inline.esp  skyrim_localized.esp  skyrim_localized_English.DLSTRINGS  skyrim_localized_English.STRINGS
tests/gui/: test_app.py  test_model_manager.py  test_worker.py
tests/reporting/: test_formatters.py
tests/translation/: test_cache.py  test_editor_id_filter.py  test_extractor.py  test_glossary.py  test_lang_detect.py  test_patcher.py  test_registry.py  test_spanish_protect.py  test_target_protect.py
(+43 files in other folders)
